[package]
name = "torrent-combine"
version = "0.1.2"
edition = "2021"
rust-version = "1.81.0"
repository = "https://github.com/mason-larobina/torrent-combine"
readme = "README.md"
authors = ["Mason Larobina <mason.larobina@pm.me>"]
description = "A tool to merge partially completed torrent data downloads."
license = "MIT"

[[bin]]
name = "torrent-combine"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3.20"
log = "0.4"
env_logger = "0.11"
rayon = "1.11"
memmap2 = "0.9.9"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signal-hook = "0.3.18"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "io_performance"
harness = false
